--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10067,6 +10067,18 @@
   .portfolio-item:hover .portfolio-text {
     top: 0;
   }
+
+  .containerServices{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .team{
+    margin-top: 50px;
+    margin-right: 30px;
+    flex-direction: row;
+    width: 100%;
+  }
   
   .team .team-img {
     position: relative;
